# eximia-os

./: .claudeignore  .env.backup.1769465528718  .gitignore  AGENTS.md  CLAUDE.md  COMO_ACESSAR_SSH.md  FIX_GALAXY_COLORS.md  GALAXY_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  MIGRATION_GUIDE.md  OBSIDIAN_FINAL_SETUP.md  SYNC_PROTOCOL.md  TROUBLESHOOTING_SSL.md  _HUB.md  agent_registry.yaml  check-easypanel-ssl.sh  create_input.py  debug-ssl.sh  eximIA_Hoshin_Kanri_2026.md  export_lxd_kbs.py  extract_excel.py  extract_pdf.py  extracted_text.txt  harven_input.json  run_log.txt  run_log_debug.txt  run_log_utf8.txt  setup_device.ps1  shrink_markdown.py  stratos_hoshin_prd.md  stratos_methodology.md  stratos_methodology_lite.md  temp_model_selection.py  temp_save_to_codex.py  temp_select_model.py  test_db.py  test_mcp_protocol.py
Projetos/exímIA APP/agent-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
eximia_runtime/: .env.example  COMMANDS.md  README.md  __init__.py  mcp_config.json  pyproject.toml  run.py
eximia_runtime/agents/: __init__.py  base.py
eximia_runtime/benchmarks/: __init__.py  cli.py  suite.py
eximia_runtime/core/: __init__.py  agent_executor.py  agent_loader.py  config.py  context_manager.py  cost_engine.py  model_selector.py  orchestrator.py  registry.py  scheduler.py  tool_manager.py
eximia_runtime/interfaces/: __init__.py  api.py  cli.py  mcp_server.py  mcp_server_v2.py
eximia_runtime/logs/: cost_history.csv
eximia_runtime/memory/: __init__.py  session.py  trie_store.py  vector_store.py
eximia_runtime/modules/: clone_advisory.py
eximia_runtime/outputs/book_processor/: 2026-01-10_010344_analyze_and_summarize_this_article_conte.md  2026-01-10_011259_analyze_and_summarize_this_article_deeps.md  2026-01-10_011504_analyze_and_summarize_this_article_depen.md  2026-01-10_011848_analyze_and_summarize_this_article_desco.md  2026-01-10_012210_analyze_and_summarize_this_article_elite.md  2026-01-10_012442_analyze_and_summarize_this_article_elonm.md  (+27 more)
eximia_runtime/protocols/: __init__.py  handoff.py  veritas_first.py
eximia_runtime/utils/: __init__.py  codex_integration.py  logging.py  memo_integration.py  metrics.py  output_manager.py  schema_validator.py  tracing.py
(+3195 files in other folders)
